My first commit!
My first commit!

--- a/style.css
+++ b/style.css
@@ -144,3 +144,4 @@ p {color:grey;
 	color:black;
  	}
 
+     @media screen and (max-width:1024px)  { .item1 class=card-img-2 class=card-img-3  .item10 } /*height:  on alla piicher;ALLA */
